<resources>
    <string name="app_name">RedRescue</string>
    <string name="quick_crime_reports_and_n_sos_alerts_in_your_language">Quick Crime Reports and \n SOS Alerts in Your Language</string>
    <string name="the_app_enables_quick_crime_reporting_n_and_instant_sos_alerts_with_real_time_location_sharing_and_n_multimedia_support">The app enables quick crime reporting \n and instant SOS alerts with real-time location sharing and \n multimedia support.</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="let_s_login_for_explore_continues">Let\'s login for explore continues</string>
    <string name="redRescue">RedRescue</string>
    <string name="or_login_with">or Login with</string>
    <string name="sign_up_here">Sign Up here</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="don_t_remember_password">Don\'t remember password?</string>

    <string name="default_web_client_id">132179251924-g63bococed04ko1je9lqi3f9lubsgghi.apps.googleusercontent.com</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="create_account_for_quick_crime_report">Create account for quick crime report</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="username">Username</string>
    <string name="generate_username">Generate UserName</string>
    <string name="user123">\@user123</string>
    <string name="userName">User Name</string>
    <string name="email">Email</string>
    <string name="enter_your_10_digit_phone_number">Enter your 10 digits number</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="signUp">Sign Up</string>
    <string name="or">Or already have an account</string>
    <string name="login">Login</string>
    <string name="network_connection_error">Network Connection Error!!</string>
    <string name="no_internet_connection">No Internet Connection, please check your internet connection and try again.</string>
    <string name="retry">Retry</string>
    <string name="yey_login_successfull">Yey! Login Successfull</string>
    <string name="you_will_be_moved_to_home_screen_right_now_enjoy_the_features">You will be moved to home screen right now . Enjoy the features !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sos_alert">SOS Alert</string>
    <string name="your_safety_our_priority">Your Safety, Our Priority</string>
    <string name="report_a_crime">Report a Crime</string>
    <string name="multimedia_evidence">Multimedia Evidence</string>
    <string name="upload_photos_videos_or_audio_evidence">Upload photos, videos, or audio evidence</string>
    <string name="location_sharing">Location Sharing</string>
    <string name="share_your_real_time_location_with_authorities">Share your real-time location with authorities</string>
    <string name="crime_description">Crime Description</string>
    <string name="describe_the_crime_in_detail">Describe the crime in detail</string>
    <string name="anonymous_reporting">Anonymous Reporting</string>
    <string name="report_anonymously_without_revealing_your_identity">Report anonymously without revealing your identity</string>
    <string name="loading">Loading...</string>
    <string name="report">REPORT</string>
    <string name="history">HISTORY</string>
    <string name="home">HOME</string>
    <string name="profile">PROFILE</string>
    <string name="about">About</string>
    <string name="profile_">Profile</string>
    <string name="_logout">Logout</string>
    <string name="let_s_explore">Let\'s Explore</string>
    <string name="search_here">Search contacts here...</string>

    <string name="personal_information">Personal Information</string>
    <string name="your_activities">Your Activities</string>
    <string name="notifications">Notifications</string>
    <string name="time_management">Time Management</string>
    <string name="account_privacy">Account Privacy</string>
    <string name="blocked_accounts">Blocked Accounts</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="faqs">FAQs</string>
    <string name="general_faqs">General FAQs</string>
    <string name="what_is_this_platform">What is this platform?</string>
    <string name="how_do_i_sign_up">How do I sign up?</string>
    <string name="what_if_i_forget_my_password">What if I forget my password?</string>
    <string name="how_do_i_change_my_account_details">How do I change my account details?</string>
    <string name="how_can_i_delete_my_account">How can I delete my account?</string>
    <string name="posting_projects"><![CDATA[Posting & Projects]]></string>
    <string name="how_can_i_make_my_posts">How can I make my posts?</string>
    <string name="how_do_i_upload_my_projects">How do I upload my projects?</string>
    <string name="privacy_security"><![CDATA[Privacy & Security]]></string>
    <string name="how_is_my_data_protected">How is my data protected?</string>
    <string name="what_is_your_privacy_policy">What is your privacy policy?</string>
    <string name="how_do_i_report_content">How do I report content?</string>
    <string name="account_information">Account Information</string>
    <string name="privacy_support"><![CDATA[Privacy & Support]]></string>
    <string name="profile1">Profile</string>
    <string name="welcome">Welcome!!</string>
    <string name="logout">LOGOUT</string>
    <string name="sos">SOS</string>
    <string name="who_should_we_alert">Who should we alert?</string>
    <string name="send_sos_to_trusted_contacts">Send SOS to Trusted Contacts</string>
    <string name="alert_your_trusted_contacts_in_case_of_emergency">Alert your trusted contacts in case of emergency</string>
    <string name="send_sos_to_admin">Send SOS to Admin</string>
    <string name="alert_the_admin_for_immediate_assistance">Alert the admin for immediate assistance</string>
    <string name="sent">SENT</string>
    <string name="save">SAVE</string>
    <string name="add_more">ADD More</string>
</resources>