<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:cnb_backgroundColor="@color/red"
        app:cnb_iconColor="@color/white" />


    <item
        android:id="@+id/report"
        android:icon="@drawable/ic_report"
        android:title="@string/report"
        app:cnb_backgroundColor="@color/red"
        app:cnb_iconColor="@color/white" />


    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_history"
        android:title="@string/history"
        app:cnb_backgroundColor="@color/red"
        app:cnb_iconColor="@color/white" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/person"
        android:title="@string/profile"
        app:cnb_backgroundColor="@color/red"
        app:cnb_iconColor="@color/white" />

</menu>