<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/mainColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/create_your_account"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/create_account_for_quick_crime_report"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/red_rescue" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/redRescue"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:padding="16dp">

            <LinearLayout
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/enter_your_name"
                    android:padding="8dp"
                    android:inputType="text"
                    android:textColor="#707070" />

                <!-- userName -->
                <TextView
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/userName"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp">

                    <EditText
                        android:id="@+id/etUserName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toStartOf="@+id/btnGenerateUsernameCV"
                        android:maxLines="1"
                        android:inputType="text"
                        android:background="@drawable/edittext_background"
                        android:hint="@string/user123"
                        android:padding="8dp"
                        android:textColor="#707070"
                        android:layout_alignParentStart="true"
                        android:layout_marginEnd="40dp"/>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/btnGenerateUsernameCV"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        app:cardCornerRadius="25dp"
                        app:cardBackgroundColor="@color/red">

                        <ImageButton
                            android:id="@+id/btnGenerateUsername"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:src="@drawable/ic_refresh"
                            android:contentDescription="@string/generate_username"
                            android:scaleType="centerInside"
                            android:padding="12dp"
                            />
                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"/>

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/person"
                    android:drawablePadding="8dp"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    android:textColor="#707070" />

                <TextView
                    android:id="@+id/textViewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editTextPwd"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/edittext_background"
                        android:hint="@string/enter_your_password"
                        android:inputType="textPassword"
                        android:drawableStart="@drawable/lock"
                        android:drawablePadding="8dp"
                        android:ems="10"
                        android:padding="8dp"
                        android:textColor="#707070" />

                    <ImageView
                        android:id="@+id/eyeIconPwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="7dp"
                        android:padding="8dp"
                        android:src="@drawable/baseline_visibility_off_24" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/textViewConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editTextConfirmPwd"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/edittext_background"
                        android:hint="@string/confirm_your_password"
                        android:inputType="textPassword"
                        android:drawableStart="@drawable/lock"
                        android:drawablePadding="8dp"
                        android:padding="8dp"
                        android:ems="10"
                        android:textColor="#707070" />

                    <ImageView
                        android:id="@+id/eyeIconConfirmPwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="7dp"
                        android:padding="8dp"
                        android:src="@drawable/baseline_visibility_off_24" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/textViewPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"/>

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/enter_your_10_digit_phone_number"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:padding="8dp"
                    android:textColor="#707070" />

                <!-- Gender -->
                <TextView
                    android:id="@+id/textViewGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"/>

                <RadioGroup
                    android:id="@+id/radioGroupGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:layout_marginStart="20dp"/>

                    <RadioButton
                        android:id="@+id/radioOther"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/other"
                        android:layout_marginStart="20dp"/>
                </RadioGroup>

                <com.app.redrescue.DiagonalButton
                    android:id="@+id/signUpBtn"
                    app:backgroundTint="@null"
                    android:background="@drawable/button_glow2"
                    android:layout_marginTop="14dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signUp"
                    android:textStyle="bold"
                    android:textSize="32sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"/>
                <Button
                    android:id="@+id/lgnBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_glow1"
                    android:focusable="true"
                    app:backgroundTint="@null"
                    android:text="@string/login"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:clickable="true"
                    android:textStyle="bold"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
