<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginMain"
    android:background="@color/mainColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <!-- Header Section -->
    <LinearLayout
        android:id="@+id/headerSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/let_s_login_for_explore_continues" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/red_rescue" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/redRescue"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="4dp" />

    </LinearLayout>

    <!-- Form Section -->
    <LinearLayout
        android:id="@+id/formSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/headerSection">

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_or_phone_number"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/enter_your_email"
            android:background="@drawable/edittext_background"
            android:textColorHint="@color/Silver"
            android:drawableStart="@drawable/person"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:ems="10"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="18dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/enter_your_password"
                android:background="@drawable/edittext_background"
                android:inputType="textPassword"
                android:textColorHint="@color/Silver"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:ems="10"
                android:layout_marginTop="8dp"/>

            <ImageView
                android:id="@+id/eyeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="12dp"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:src="@drawable/baseline_visibility_off_24" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/keepSignedIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_remember_password"
                android:textColor="#A8A8A8"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_marginStart="70dp"
                android:textColor="#E32727"
                android:textSize="13sp" />

        </LinearLayout>

        <com.app.redrescue.DiagonalButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/red_bg"
            app:backgroundTint="@null"
            android:text="@string/sign_in"
            android:textColor="#fff"
            android:textSize="16sp"
            android:layout_marginTop="24dp"/>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="10dp"
            android:visibility="gone" />

        <!-- Divider -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#707070" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/or_login_with" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#707070" />
        </LinearLayout>

        <!-- Social icons -->
        <LinearLayout
            android:id="@+id/socialIcons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/google_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/google"
                android:layout_marginEnd="24dp"/>

        </LinearLayout>

        <!-- Sign Up Row -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="24dp">

            <TextView
                android:id="@+id/signUpRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="#222"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/signUpLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_here"
                android:layout_marginStart="4dp"
                android:textColor="#E32727"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
